--- a/app/src/main/res/layout/layout_pre_wa_wab.xml
+++ b/app/src/main/res/layout/layout_pre_wa_wab.xml
@@ -42,20 +42,22 @@
 
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/appCompatCheckBox"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_24sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:background="@drawable/bg_checkbox_buy_pre"
+                android:button="@null" />
 
             <ImageView
-                android:layout_width="@dimen/_40sdp"
+                android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:layout_marginEnd="@dimen/_38sdp"
-                android:layout_marginBottom="@dimen/_18sdp"
-                android:src="@drawable/ic_pr1"
+                android:layout_marginEnd="@dimen/_26sdp"
+                android:layout_marginBottom="@dimen/_11sdp"
+                android:src="@drawable/ic_pr3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -75,8 +77,9 @@
                     android:layout_height="wrap_content"
                     android:text="@string/wa_wab"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12sdp"
-                    android:textStyle="bold"/>
+                    android:textSize="@dimen/_10sdp"
+                    android:textStyle="bold"
+                    android:paddingBottom="@dimen/_5sdp"/>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
@@ -104,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:text="916,000 ₫"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_26sdp"
+                android:textSize="@dimen/_22sdp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
