--- a/app/src/main/res/layout/layout_pre_wab.xml
+++ b/app/src/main/res/layout/layout_pre_wab.xml
@@ -42,13 +42,15 @@
 
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/appCompatCheckBox"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_24sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:background="@drawable/bg_checkbox_buy_pre"
+                android:button="@null"/>
 
             <ImageView
                 android:layout_width="@dimen/_40sdp"
@@ -75,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/id_wa_business"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
                 <androidx.cardview.widget.CardView
@@ -104,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:text="680,000 ₫"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_26sdp"
+                android:textSize="@dimen/_22sdp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
