--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -66,6 +66,16 @@
                     android:src="@drawable/ic_profile_24" />
             </androidx.cardview.widget.CardView>
 
+            <ImageView
+                android:id="@+id/menuToolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_menu_24"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:visibility="gone"/>
+
+
         </LinearLayout>
 
 
