--- a/app/src/main/res/drawable/background_item_step2.xml
+++ b/app/src/main/res/drawable/background_item_step2.xml
@@ -2,12 +2,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="100"
+        android:angle="90"
         android:endColor="#F1F5FF"
         android:startColor="#C9D8FF" />
 
     <stroke
-        android:width="@dimen/_2sdp"
+        android:width="2dp"
         android:color="#C9D8FF" />
-    <corners android:radius="@dimen/_20sdp" />
+
+    <corners android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"/>
+
 </shape>
