--- a/app/src/main/res/layout/activity_backup.xml
+++ b/app/src/main/res/layout/activity_backup.xml
@@ -25,7 +25,7 @@
             android:id="@+id/stateProgressbar"
             layout="@layout/stateprogressbar_backup"/>
 
-        <FrameLayout
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/fragmentView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
