--- a/app/src/main/res/layout/activity_status_saver.xml
+++ b/app/src/main/res/layout/activity_status_saver.xml
@@ -60,10 +60,10 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingStart="@dimen/_10sdp"
-                        android:paddingTop="@dimen/_5sdp"
-                        android:paddingEnd="@dimen/_10sdp"
-                        android:paddingBottom="@dimen/_5sdp">
+                        android:paddingStart="@dimen/_15sdp"
+                        android:paddingTop="@dimen/_4sdp"
+                        android:paddingEnd="@dimen/_15sdp"
+                        android:paddingBottom="@dimen/_4sdp">
 
                         <ImageView
                             android:layout_width="@dimen/_20sdp"
@@ -86,7 +86,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/_20sdp"
-                    android:src="@drawable/ic_menu_24" />
+                    android:src="@drawable/ic_menu_24"
+                    android:layout_marginStart="@dimen/_10sdp"/>
 
 
             </LinearLayout>
