--- a/app/src/main/res/layout/layout_deleted_recover.xml
+++ b/app/src/main/res/layout/layout_deleted_recover.xml
@@ -33,7 +33,8 @@
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/black"/>
 
         <ImageView
             android:layout_width="wrap_content"
