--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -13,19 +13,19 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:outlineSpotShadowColor="@color/trans">
+        android:outlineSpotShadowColor="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_height="51dp"
+            android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/btn_back"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_24sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_gravity="center"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:src="@drawable/ic_back_toolbar" />
@@ -38,6 +38,9 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:ellipsize="end"
+                android:maxWidth="@dimen/_180sdp"
+                android:maxLength="18"
+                android:singleLine="true"
                 android:text="@{toolbarName}"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_18sdp"
@@ -70,10 +73,10 @@
                 android:id="@+id/menuToolbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_menu_24"
                 android:layout_gravity="center"
                 android:layout_marginEnd="@dimen/_20sdp"
-                android:visibility="gone"/>
+                android:src="@drawable/ic_menu_24"
+                android:visibility="gone" />
 
 
         </LinearLayout>
