dev_mt update 23/12/2022

--- a/app/src/main/res/drawable/background_item_step2.xml
+++ b/app/src/main/res/drawable/background_item_step2.xml
@@ -4,7 +4,7 @@
     <gradient
         android:angle="90"
         android:endColor="#F1F5FF"
-        android:startColor="#C9D8FF" />
+        android:startColor="#F1F5FF" />
 
     <stroke
         android:width="2dp"
