--- a/app/src/main/res/layout/activity_select_file.xml
+++ b/app/src/main/res/layout/activity_select_file.xml
@@ -59,7 +59,8 @@
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="@dimen/_18sdp"
                     android:layout_gravity="center"
-                    app:cardElevation="0dp">
+                    app:cardElevation="0dp"
+                    app:cardBackgroundColor="@color/white">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
