--- a/app/src/main/res/layout/dialog_request_buy_premium.xml
+++ b/app/src/main/res/layout/dialog_request_buy_premium.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        app:cardCornerRadius="@dimen/_38sdp">
+        app:cardCornerRadius="@dimen/_38sdp"
+        app:cardBackgroundColor="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
