--- a/app/src/main/res/layout/layout_pre_wab.xml
+++ b/app/src/main/res/layout/layout_pre_wab.xml
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:rippleColor="@color/trans">
+        app:cardBackgroundColor="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
@@ -52,7 +52,9 @@
                 android:button="@null"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:enabled="false"
+                android:clickable="false"/>
 
             <ImageView
                 android:layout_width="@dimen/_40sdp"
