--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="color_9497D6">#9497D6</color>
     <color name="color_0038FF">#0038FF</color>
     <color name="color_F3F7FF">#F3F7FF</color>
+    <color name="color_26919FD1">#26919FD1</color>
 
     <color name="trans">@android:color/transparent</color>
 
