--- a/app/src/main/res/drawable/bg_stateprogressbar.xml
+++ b/app/src/main/res/drawable/bg_stateprogressbar.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/_10sdp"
-    android:height="@dimen/_10sdp"
+    android:width="15dp"
+    android:height="15dp"
     android:viewportWidth="9"
     android:viewportHeight="9">
   <path
