--- a/app/src/main/res/layout/item_step2_backup.xml
+++ b/app/src/main/res/layout/item_step2_backup.xml
@@ -41,7 +41,9 @@
             android:button="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            android:clickable="false"
+            android:enabled="false"/>
 
 
         <LinearLayout
