--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -13,22 +13,25 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:outlineSpotShadowColor="@android:color/transparent">
+        app:cardBackgroundColor="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="51dp"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/btn_back"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_gravity="center"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:src="@drawable/ic_back_toolbar" />
+                android:layout_marginStart="@dimen/_15sdp"
+                android:src="@drawable/ic_back_toolbar"
+                android:paddingTop="@dimen/_5sdp"
+                android:paddingStart="@dimen/_5sdp"
+                android:paddingBottom="@dimen/_5sdp"/>
 
             <TextView
                 android:id="@+id/txt_toolbar"
@@ -56,11 +59,12 @@
                 android:layout_width="@dimen/_36sdp"
                 android:layout_height="@dimen/_36sdp"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
-                android:layout_marginBottom="@dimen/_3sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 app:cardCornerRadius="@dimen/_10sdp"
-                tools:ignore="MissingConstraints">
+                tools:ignore="MissingConstraints"
+                app:cardBackgroundColor="@color/white">
 
                 <ImageView
                     android:layout_width="match_parent"
